# Zadanie-3

./: CMakeLists.txt  CMakePresets.json  Doxyfile  Doxyfile.bak  MergeSortTests.cpp
docs/html/: _merge_sort_8h.html  _merge_sort_8h.js  _merge_sort_8h_source.html  _merge_sort_tests_8cpp.html  _merge_sort_tests_8cpp.js  annotated.html  annotated_dup.js  class_merge_sort-members.html  class_merge_sort.html  class_merge_sort.js  classes.html  dir_e0843914df69aa332a9e130846013c7e.html  dir_e0843914df69aa332a9e130846013c7e.js  doxygen_crawl.html  files.html  files_dup.js  functions.html  functions_func.html  globals.html  globals_func.html  index.html  main_8cpp.html  navtreedata.js  navtreeindex0.js
docs/html/search/: all_0.js  all_2.js  files_0.js  functions_1.js  searchdata.js
docs/latex/: _merge_sort_8h.tex  _merge_sort_8h_source.tex  _merge_sort_tests_8cpp.tex  annotated.tex  class_merge_sort.tex  dir_e0843914df69aa332a9e130846013c7e.tex  dirs.tex  files.tex  main_8cpp.tex  refman.tex
html/: _merge_sort_8h_source.html  annotated.html  annotated_dup.js  class_merge_sort-members.html  class_merge_sort.html  classes.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_e0843914df69aa332a9e130846013c7e.html  doxygen_crawl.html  files.html  navtreedata.js  navtreeindex0.js
latex/: _merge_sort_8h_source.tex  annotated.tex  class_merge_sort.tex  files.tex  refman.tex
src/: MergeSort.h  main.cpp
testy/: MergeSortTests.cpp
